# fglog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  pch.hpp  vcpkg.json
include/: Logger.hpp
src/: Logger.cpp
test/: main.cpp
